Added bullets particles. Gitignore changed to exclude some assets. Fixed materials for trees. Some minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+Assets/Imported Assets/StarSparrow
+Assets/Imported Assets/Tree stump
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -33,3 +35,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Imported Assets/StarSparrow.meta
